--- a/mynotebook.ipynb
+++ b/mynotebook.ipynb
@@ -20,6 +20,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lol\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"lol\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
